--- a/financial_dashboard/templates/login.html
+++ b/financial_dashboard/templates/login.html
@@ -15,6 +15,6 @@
         <div class="section">
             <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
         </div>
-        <button class="btn btn-primary" type="submit">Log In</button>
+        <button class="button btn-primary" type="submit">Log In</button>
     </form>
 {% endblock %}
