--- a/financial_dashboard/templates/layout.html
+++ b/financial_dashboard/templates/layout.html
@@ -8,9 +8,9 @@
         <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 
-        <!--<link href="/staticFiles/favicon.ico" rel="icon">-->
+        <!--<link href="/static/favicon.ico" rel="icon">-->
 
-        <link href="/financial_dashboard/staticFiles/styles.css" rel="stylesheet">
+        <link href="{{ url_for('static', filename='/styles.css') }}" rel="stylesheet" type="text/css">
 
         <title>Financial Dashboard: {% block title %}{% endblock %}</title>
     </head>
