Update Dash page layout and start-up procedure.

--- a/financial_dashboard/static/styles.css
+++ b/financial_dashboard/static/styles.css
@@ -21,6 +21,10 @@ nav .navbar-brand .green
 {
     color: #2e944b;
 }
+nav .navbar-brand .white
+{
+    color: #ffffff;
+}
 
 .button
 {
@@ -43,10 +47,12 @@ nav .navbar-brand .green
     padding-right: 15px;
     text-align: center;
     width: 90%;
+    background-color: #404040;
 }
 
 .section {
     text-align: center;
+    background-color: #404040
     padding-bottom: 1rem;
     padding-left: 2rem;
     padding-right: 2rem;
@@ -59,7 +65,7 @@ table, th, td {
   }
 
 .header {
-    background-color: #477bff;
+    background-color: #181818;
     color: #fff;
     margin-bottom: 2rem;
     padding: 2rem 1rem;
