--- a/financial_dashboard/templates/register.html
+++ b/financial_dashboard/templates/register.html
@@ -19,6 +19,17 @@
         <div class="section">
             <input class="form-control mx-auto w-auto" id="confirmation" name="confirmation" placeholder="Confirm Password" type="password">
         </div>
+        <br>
+        <h3>User Financial Information</h3>
+        <div class="section">
+            <label for="annualIncome">Annual Income: $</label>
+            <input class="form-control mx-auto w-auto" id="annualIncome" name="annualIncome" placeholder="e.g. 60000" type="number">
+        </div>
+        <div class="section">
+            <label for="sideIncome">Annual Secondary Income: $</label>
+            <input class="form-control mx-auto w-auto" id="sideIncome" name="sideIncome" placeholder="e.g. 10000" type="number">
+        </div>
+        <br>
         <button class="btn btn-primary" type="submit">Register</button>
     </form>
 {% endblock %}
