--- a/financial_dashboard/templates/layout.html
+++ b/financial_dashboard/templates/layout.html
@@ -14,21 +14,21 @@
 
         <title>Financial Dashboard: {% block title %}{% endblock %}</title>
     </head>
-    <body>
-        <nav class="bg-light border navbar navbar-expand-md navbar-light">
+    <body style="background-color:#404040;text-align:center">
+        <nav class="bg-dark border navbar navbar-expand-md navbar-dark">
             <div class="container">
-                <a class="navbar-brand" href="/"><span class="red">FinDash</span></a>
+                <a class="navbar-brand" href="/"><span class="white">FinDash</span></a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbar">
+                <div style="text-color:white" class="collapse navbar-collapse" id="navbar">
                     {% if session["user_id"] %}
                         <ul class="navbar-nav me-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/link_to_dash">Dashboard</a></li>
+                            <li class="nav-item"><a class="nav-link" style="text-color:white" href="/link_to_dash">Dashboard</a></li>
                             <li class="nav-item"><a class="nav-link" href="/upload">Upload</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
+                            <li class="nav-item"><a class="nav-link" href="/userprofile">Profile</a></li>
                             <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
                         </ul>
                     {% else %}
@@ -43,13 +43,13 @@
 
         {% if get_flashed_messages() %}
             <header>
-                <div class="alert alert-primary mb-0 text-center" role="alert">
+                <div style="text-align:center" class="alert alert-primary mb-0" role="alert">
                     {{ get_flashed_messages() | join(" ") }}
                 </div>
             </header>
         {% endif %}
 
-        <main class="container-fluid py-5 text-center">
+        <main class="container-fluid py-5 text-center text-white">
             {% block main %}{% endblock %}
         </main>
     </body>
