--- a/financial_dashboard/templates/layout.html
+++ b/financial_dashboard/templates/layout.html
@@ -7,6 +7,7 @@
         <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
         <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+        <script src="https://cdn.plot.ly/plotly-2.29.1.min.js" charset="utf-8"></script>
 
         <!--<link href="/static/favicon.ico" rel="icon">-->
 
@@ -26,9 +27,10 @@
                         <ul class="navbar-nav me-auto mt-2">
                             <li class="nav-item"><a class="nav-link" style="text-color:white" href="/link_to_dash">Dashboard</a></li>
                             <li class="nav-item"><a class="nav-link" href="/upload">Upload</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/budget">Budget</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/userprofile">Profile</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
                             <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
                         </ul>
                     {% else %}
