--- a/financial_dashboard/templates/layout.html
+++ b/financial_dashboard/templates/layout.html
@@ -8,6 +8,7 @@
         <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
         <script src="https://cdn.plot.ly/plotly-2.29.1.min.js" charset="utf-8"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
         <!--<link href="/static/favicon.ico" rel="icon">-->
 
