--- a/financial_dashboard/templates/profile.html
+++ b/financial_dashboard/templates/profile.html
@@ -8,13 +8,9 @@
     <div class="header">
         <h1>User Profile</h1>
     </div>
-    <form action="/profile" method="POST">
-        <div class="section">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
-        </div>
-        <div class="section">
-            <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
-        </div>
-        <button class="button btn-primary" type="submit">Log In</button>
-    </form>
+    <div><h1>Welcome {{ username }}</h1></div>
+    <div class="section">
+        <a href="/budget">See Budget</a>
+<!--            <a href="/budget">See Budget</a>-->
+    </div>
 {% endblock %}
